# quantr

./: .gitignore  AGENTS.md  Makefile  README.md
cue.mod/: module.cue
evals/: pyproject.toml  qwen36-27b.sh
quant/: pyproject.toml  qwen36-27b.py
quant/recipes/: gptq.yaml
utils/: oom-check.sh
